[package]
name = "rusty-drawing"
version = "0.1.0"
authors = ["Tin Rabzelj <tin@flinect.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0.105", features = ["derive"] }
serde_json = "1.0.50"
uuid = { version = "0.8.1", features = ["serde", "v4"] }
rand = "0.7.3"
tokio = { version = "0.2.20", features = ["full"] }
#tungstenite = "0.10.1"
tokio-tungstenite = "0.10.1"
futures-util = "0.3.4"
